src/test/deca/context/invalid/created/SansObjet/declVar5.deca
// Resultats :
//    Erreur contextuelle
//    Ligne 6: Error: Invalid type for variable declaration

{
    sfgs a;
}
